refactor: migrating toward a microtask/worker sync system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,23 @@
 {
     "compilerOptions": {
         "allowJs": true,
-        "allowUmdGlobalAccess": true,
         "alwaysStrict": true,
         "baseUrl": "src",
         "declaration": true,
         "declarationDir": "./build",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "lib": ["dom", "es7"],
-        "module": "esnext",
+        "lib": ["dom", "ESNext"],
+        "module": "NodeNext",
         "moduleResolution": "node",
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noUncheckedIndexedAccess": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "outDir": "./build",
-        "paths": { },
+        "paths": {
+            "~/*": ["*"]
+        },
         "removeComments": true,
         "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "sourceMap": false,
         "strict": true,
-        "strictBindCallApply": true,
-        "strictFunctionTypes": true,
-        "strictNullChecks": true,
-        "strictPropertyInitialization": true,
-        "target": "esnext"
+        "target": "ESNext"
     },
     "exclude": ["node_modules"],
     "include": ["src"],
