--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "author": "ICJR",
+    "dependencies": {
+        "localforage": "^1.10.0"
+    },
     "description": "Web storage utility",
     "devDependencies": {
         "glob": "^8.0.3",
-        "localforage": "^1.10.0",
         "ts-loader": "^9.4.1",
         "tsc-alias": "^1.7.0",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
