--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
         "baseUrl": "src",
         "declaration": true,
         "declarationDir": "./build",
-        "lib": ["dom", "ESNext"],
-        "module": "NodeNext",
+        "lib": ["dom", "esnext"],
+        "module": "esnext",
         "moduleResolution": "node",
         "noUnusedLocals": true,
         "noUnusedParameters": true,
@@ -17,7 +17,7 @@
         "removeComments": true,
         "resolveJsonModule": true,
         "strict": true,
-        "target": "ESNext"
+        "target": "esnext"
     },
     "exclude": ["node_modules"],
     "include": ["src"],
