--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
     "author": "ICJR",
-    "dependencies": {
-        "localforage": "^1.10.0"
-    },
     "description": "Web storage utility",
     "devDependencies": {
         "glob": "^8.0.3",
-        "ts-loader": "^9.4.1",
-        "tsc-alias": "^1.7.0",
+        "localforage": "^1.10.0",
+        "ts-loader": "^9.4.2",
+        "tsc-alias": "^1.8.1",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
-        "typescript": "^4.8.4",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0"
+        "typescript": "^4.9.3",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
     },
     "main": "./build/index.js",
     "name": "@esportsplus/web-storage",
