--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
     "author": "ICJR",
+    "dependencies": {
+        "localforage": "^1.10.0"
+    },
     "description": "Web storage utility",
     "devDependencies": {
-        "glob": "^8.0.3",
-        "localforage": "^1.10.0",
-        "ts-loader": "^9.4.2",
         "tsc-alias": "^1.8.1",
-        "tsconfig-paths-webpack-plugin": "^4.0.0",
-        "typescript": "^4.9.3",
-        "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1"
+        "typescript": "^4.9.3"
     },
     "main": "./build/index.js",
     "name": "@esportsplus/web-storage",
