--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
         "removeComments": true,
         "resolveJsonModule": true,
         "strict": true,
-        "target": "esnext"
+        "target": "esnext",
+        "typeRoots": ["node_modules/@types"]
     },
     "exclude": ["node_modules"],
-    "include": ["src"],
-    "typeRoots": ["node_modules/@types"]
+    "include": ["src"]
 }
