--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
         "removeComments": true,
         "resolveJsonModule": true,
         "strict": true,
-        "target": "esnext",
-        "typeRoots": ["node_modules/@types"]
+        "target": "esnext"
     },
     "exclude": ["node_modules"],
     "include": ["src"]
