chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     },
     "description": "Web storage utility",
     "devDependencies": {
-        "@esportsplus/webpack": "^0.0.97"
+        "@esportsplus/rspack": "^0.0.15"
     },
     "main": "build/index.js",
     "name": "@esportsplus/web-storage",
