--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     },
     "description": "Web storage utility",
     "devDependencies": {
-        "@esportsplus/rspack": "^0.0.15"
+        "@esportsplus/typescript": "^0.0.21"
     },
     "main": "build/index.js",
     "name": "@esportsplus/web-storage",
