--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "author": "ICJR",
     "dependencies": {
-        "@esportsplus/crypto": "^0.3.1"
+        "@esportsplus/utilities": "^0.26.0"
     },
     "description": "Web storage utility",
     "devDependencies": {
